# earnings_iv_crush

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
earnings_iv_crush/: __init__.py  config.py
earnings_iv_crush/baseline/: __init__.py  agent0.py
earnings_iv_crush/data/: __init__.py  alpaca_options.py  cache.py  calendar_build.py  chain_cache.py  config.py  data_intake.py  data_pipeline.py  databento_options.py  dolthub_options.py  earnings.py  equities.py  features.py  historical_surfaces.py  options.py  quality.py  real_events.py  sec_edgar.py  sectors.py  surprise.py  term_panel.py  universe.py  vix.py
earnings_iv_crush/engine/: attribution.py  backtester.py  cohorts.py  costs.py  greeks.py  pnl.py  portfolio.py  reporting.py  risk.py  sensitivity.py  simulate.py  stats.py  structured_ledger.py  walkforward.py
earnings_iv_crush/live/: __init__.py  forward_test.py  ib_connection.py  ib_market.py  ib_orders.py  paper_book.py
earnings_iv_crush/strategy/: fair_move_model.py  filters.py  regime.py  strategy.py  structures.py
earnings_iv_crush/util/: progress.py
scripts/: fetch_chains.py  paper_trade_ibkr.py  run_backtest.py  run_research.py  run_sensitivity.py  smoke_test.py
src/: __init__.py  config.py
src/baseline/: agent0.py
src/data/: alpaca_options.py  cache.py  config.py  data_intake.py  data_pipeline.py  earnings.py  equities.py  features.py  historical_surfaces.py  options.py  real_events.py  sec_edgar.py  surprise.py  term_panel.py  vix.py
src/engine/: __init__.py  attribution.py  backtester.py  costs.py  greeks.py  pnl.py  reporting.py  risk.py  sensitivity.py  simulate.py  stats.py  structured_ledger.py  walkforward.py
(+54 files in other folders)
